examples/datalog/18_advanced_patterns/130_last_value.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_last
Knowledge graph 'test_last' created.
Switched to knowledge graph: test_last
> .kg use test_last
Switched to knowledge graph: test_last
> +data[(1, 100), (2, 200), (3, 150)].
Inserted 3 fact(s) into 'data'.
> +max_id(<MAX:Id>) :- data(Id, _).
Script error: Parse error: Invalid term: '<MAX:Id>'
