examples/datalog/18_advanced_patterns/130_last_value.dl
% Test: Last value simulation
% Expected: Get last value by order
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_last
.kg use test_last

+data[(1, 100), (2, 200), (3, 150)].

% Maximum id (last)
+max_id(<MAX:Id>) :- data(Id, _).

?- max_id(M).

.kg use default
.kg drop test_last
